--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "@calcom/embed-react": "^1.5.3",
     "clsx": "^2.1.1",
     "react": "^19.2.0",
+    "react-activity-calendar": "^3.0.5",
     "react-dom": "^19.2.0",
+    "react-github-calendar": "^5.0.4",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
